<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <!-- General -->
    <string name="app_name">Hartige Hap Reservation</string>
    <string name="ok" tools:translatable="false">@android:string/ok</string>
    <string name="cancel" tools:translatable="false">@android:string/cancel</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="copy">Copy</string>
    <string name="form_error_empty">May not be empty</string>
    <string name="form_error_invalid">Invalid value</string>

    <!-- Restaurant -->
    <string name="restaurants_select">Select your desired restaurant</string>
    <string name="restaurants_empty">No restaurants available.</string>
    <string name="restaurants_error">Error retrieving restaurants.</string>

    <!-- Reservation form -->
    <string name="reservation_title">%s Reservation</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="persons">Number of persons</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="comments">Comments (optional)</string>

    <!-- Reservation -->
    <string name="reservation_submitting">Submitting reservation</string>
    <string name="reservation_checking">Checking availability…</string>
    <string name="reservation_successful">Reservation submitted successfully</string>
    <string name="reservation_code">Reservation code</string>
    <string name="reservation_code_message">Your reservation code: &lt;b>%s&lt;/b>&lt;br />&lt;br />Make sure to keep it safe, it is needed upon arrival in restaurant.</string>
    <string name="reservation_code_copied">Reservation code copied to the clipboard</string>
    <string name="reservation_failed">There are no free tables. Please adjust the date, time or persons in order to continue.</string>
    <string name="reservation_error">Failed to reach server. Are you sure you\'re connected?</string>

    <!-- Timepicker dialog -->
    <string name="timepicker_title">Start and end time</string>
    <string name="until">until</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_api">API Settings</string>

    <string name="settings_api_host">API host</string>
    <string name="settings_api_host_invalid">This is not a valid host, enter either a domain or an ip-address</string>

    <string name="settings_api_port">API port</string>
    <string name="settings_api_port_invalid">This is not a valid port number</string>

    <!-- About dialog -->
    <string name="about">About</string>
    <string name="about_title">About this app</string>
    <string name="about_message"><![CDATA[<b>%1$s v%2$s</b><br/><br/>The source code of both this <a href="https://github.com/Intrexion/IVH11A1_App">app</a> and the <a href="https://github.com/Intrexion/IVH11A1">server</a> are open and can be found at GitHub.<br/><br/>Copyright &#169; 2015 - IVH11A1]]></string>
</resources>
