<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.avans.hartigehap.a1.RestaurantFragment">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/restaurant"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            style="@android:style/TextAppearance.Medium.Inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#70000000"
            android:text="@string/restaurants_select"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight" />

    </FrameLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ListView
            android:id="@+id/restaurantListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />

        <ProgressBar
            android:id="@+id/restaurantsProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/restaurantsEmpty"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/restaurants_empty"
            android:visibility="gone" />

        <TextView
            android:id="@+id/restaurantsError"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/restaurants_error"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>
